# build-params

./: .gitignore  Cargo.toml  README.md
examples/git-metadata/: Cargo.toml  README.md  build.rs
examples/git-metadata/src/: main.rs
src/: input.rs  lib.rs
test-lib/: Cargo.toml  build.rs
